[gd_scene load_steps=9 format=2]

[ext_resource path="res://GameObjects/Ships/Miner/MiningShip.png" type="Texture" id=1]
[ext_resource path="res://GameObjects/Ships/Miner/Miner.gd" type="Script" id=2]
[ext_resource path="res://GameObjects/Cosmetics/Outliner/shipHighlight.png" type="Texture" id=3]
[ext_resource path="res://GameObjects/Cosmetics/ShipAudo/engineCircular_000.ogg" type="AudioStream" id=4]
[ext_resource path="res://GameObjects/Cosmetics/ShipAudo/explosionCrunch_002.ogg" type="AudioStream" id=5]
[ext_resource path="res://GameObjects/Cosmetics/ShipAudo/impactMetal_medium_003.ogg" type="AudioStream" id=6]
[ext_resource path="res://GameObjects/Attributes/Inventory/Inventory.tscn" type="PackedScene" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 50, 51 )

[node name="MiningShip" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Inventory" parent="." instance=ExtResource( 7 )]
position = Vector2( 23, 255 )

[node name="Ship" type="Sprite" parent="."]
scale = Vector2( 0.25, 0.2 )
texture = ExtResource( 1 )

[node name="Selector" type="Sprite" parent="Ship"]
visible = false
texture = ExtResource( 3 )

[node name="Collider" type="CollisionShape2D" parent="."]
position = Vector2( -1, 2 )
shape = SubResource( 1 )

[node name="EngineSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = 1.0
pitch_scale = 0.57
attenuation = 12.5533

[node name="DrillSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = 1.0
pitch_scale = 1.23
attenuation = 4.28709

[node name="UnloadSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = 1.0
pitch_scale = 0.38
attenuation = 6.96438

[node name="JobTimer" type="Timer" parent="."]

[connection signal="timeout" from="JobTimer" to="." method="_on_JobTimer_timeout"]
